public/css/modal.scss
@use "sass:color";
@use "./config";

$modal-z-index: config.$z-index-modal-overlay;

.modal-overlay {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(black, 0.35);
    z-index: $modal-z-index;
    backdrop-filter: blur(2px);
}

.modal {
    position: fixed;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 2px solid config.$border-color;
    box-shadow:
        0 0 5px rgba(0, 0, 0, 0.5),
        4px 4px 8px rgba(0, 0, 0, 0.75);
    z-index: $modal-z-index + 1;
    border-radius: 4px;
    background-color: config.$bg-color;

    $modal-padding-x: config.$gutter;
    $modal-padding-y: config.$gutter-half;

    &.modal-danger {
        .modal-title {
            background-color: config.$danger-bg;
        }

        .modal-title {
            border-color: config.$danger-border;
        }
    }

    .modal-title, .modal-footer {
        padding: $modal-padding-y $modal-padding-x;
        background-color: config.$accent-bg;
    }

    .modal-title {
        font-weight: bold;
        font-size: 1.25rem;
        border-bottom: 2px solid config.$border-color;
        text-shadow: 1px 1px 1px black;

        .title-text {
            max-width: 20em;
            text-overflow: ellipsis;
            white-space: nowrap;
            overflow: hidden;
        }
    }

    .modal-footer {
        border-top: 2px solid config.$border-color;
        display: flex;
        justify-content: space-between;

        .actions-container {
            display: flex;
            gap: config.$gutter-half;
            align-items: center;
        }
    }

    .modal-body {
        padding: $modal-padding-x;
        display: flex;
        gap: config.$gutter-half;

        .col {
            display: flex;
            flex-direction: column;
            gap: config.$gutter;
        }

        section {
            > header {
                color: config.$accent-color;
                margin-bottom: config.$gutter-quarter;
                text-shadow: 1px 1px 1px black;
            }
        }
    }
}

